# eodhd-mcp

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md
scripts/: validate.ps1  validate.py  validate.sh
src/: client.rs  format.rs  main.rs  server.rs  types.rs
src/analytics/: anomaly.rs  mod.rs  normalization.rs  ratios.rs  ttm.rs
src/cache/: mod.rs
src/tools/: compare.rs  fetch.rs  financials.rs  health_check.rs  mod.rs  snapshot.rs
tests/: fixture_smoke.rs
tests/common/: mod.rs
tests/fixtures/: aapl_fundamentals.json
